# flipper-apps

./: .gitignore  README.md  justfile  justfile.python  pyproject.toml
.github/workflows/: release.yml  sync-versions.yml
apps/_template/: README.md  changelog.md  manifest.yml
apps/big-clock/: README.md  application.fam  big_clock.c  changelog.md  manifest.yml
apps/big-clock/screenshots/: .gitkeep
apps/reality-clock/: README.md  application.fam  changelog.md  manifest.yml  reality_clock.c
apps/reality-clock-backup/: application.fam.backup  debug_log.csv  reality_clock.c.bak  retrieve_log.py
apps/reality-clock/scripts/: retrieve_and_analyze.py
docs/: PUBLISHING.md
